Fixed the problem with categories not showing up on several pages.

--- a/src/css/style_sheet.css
+++ b/src/css/style_sheet.css
@@ -33,8 +33,8 @@ a {
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    /* justify-content: space-around;
+    align-items: center; */
   
 }
 
@@ -44,7 +44,7 @@ a {
     width: 35vw;
     border: 2px #4267B2 solid;
     border-radius: 5px;
-    margin: 5px;
+    margin: 20px;
 }
 
 .categories:first-of-type{
